Starting style.css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         </div>
         <div class="headerlow">
             <div class="text">
-                <div class="main">This Web site is awesome</div>
-                <div class="secondary">Thias web site has some subtext that goes here under the main title.
+                <div class="main">This website is awesome</div>
+                <div class="secondary">This web site has some subtext that goes here under the main title.
                     It's a smaller and the color is lower contrast 
                 </div>
+                <button>Sign up</button>
             </div>
             <div class="img">
                 <img src="" alt="Place holder for an image.">
