Atualizando index.html e style.css

--- a/index.html
+++ b/index.html
@@ -9,59 +9,61 @@
 </head>
 <body>
     <div class="hero">
-        <div class="header">
-            <div class="logo">Header Logo</div>
-            <div class="links">
-                <ul>
-                    <li><a href="#">Header link one</a></li>
-                    <li><a href="#">Header link two</a></li>
-                    <li><a href="#">Header link three</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="headerlow">
-            <div class="text">
-                <div class="main">This website is awesome</div>
-                <div class="secondary">This web site has some subtext that goes here under the main title.
-                    It's a smaller and the color is lower contrast 
+        <div class="limit">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <div class="links">
+                    <ul>
+                        <li><a href="#">Header link one</a></li>
+                        <li><a href="#">Header link two</a></li>
+                        <li><a href="#">Header link three</a></li>
+                    </ul>
                 </div>
-                <button>Sign up</button>
             </div>
-            <div class="img">
-                <img src="" alt="Place holder for an image.">
+            <div class="headerlow">
+                <div class="text">
+                    <div class="main">This website is awesome</div>
+                    <div class="secondary">This web site has some subtext that goes here under the main title.
+                        It's a smaller and the color is lower contrast 
+                    </div>
+                    <button>Sign up</button>
+                </div>
+                <div class="img">
+                    <img src="" alt="Place holder for an image.">
+                </div>
             </div>
-        </div>
+        </div>    
     </div>
     <div class="random">
-        <a>Some random information</a>
+        <div class="um">Some random information</div>
         <div class="list">
-            <div class="img">
-                <img src="" alt="Place holder for an image.">
+            <div class="img2">
+                <img class="margem" src="" >
                 <div class="txt">this is some sub text under a ilustration or image</div>
             </div>
-            <div class="img">
-                <img src="" alt="Place holder for an image.">
+            <div class="img2">
+                <img class="margem" src="" >
                 <div class="txt">this is some sub text under a ilustration or image</div>
             </div>
-            <div class="img">
-                <img src="" alt="Place holder for an image.">
+            <div class="img2">
+                <img class="margem" src="" >
                 <div class="txt">this is some sub text under a ilustration or image</div>
             </div>
-            <div class="img">
-                <img src="" alt="Place holder for an image.">
+            <div class="img2">
+                <img class="margem" src="" >
                 <div class="txt">this is some sub text under a ilustration or image</div>
             </div>
         </div>
     </div>
     <div class="quote">
         <a class="qtxt">This is a inspiring quote, or a testimonial from a costumer. Maybe it's 
-            just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice</a>
+            just filling up space, or maybe people actually read it. Who knows? All I know is that it looks nice.</a>
         <a class="author">Thor, God of Thunder</a>
     </div>
     <div class="ad">
         <div class="adt">Call to action! It's time!</div>
         <div class="ads">Sign up for our product by clicking tha button right over there</div>
-        <button>Sign up</button>
+        <button class="dois">Sign up</button>
     </div>
     <div class="footer">
         <a>Copyright Ⓒ The Odin Project 2021</a>
