--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
         <a class="author">Thor, God of Thunder</a>
     </div>
     <div class="ad">
-        <div class="adt">Call to action! It's time!</div>
-        <div class="ads">Sign up for our product by clicking tha button right over there</div>
-        <button class="dois">Sign up</button>
+        <div class="ada">
+            <div class="adb">
+                <div class="adt">Call to action! It's time!</div>
+                <div class="ads">Sign up for our product by clicking tha button right over there!</div>
+            </div>
+            <button class="dois">Sign up</button>
+        </div>
     </div>
     <div class="footer">
-        <a>Copyright Ⓒ The Odin Project 2021</a>
+        <a class="secondary">Copyright Ⓒ The Odin Project 2021</a>
     </div>
 </body>
 </html>
